# origin

./: .gitignore
Lesson 1/Task 1/ConsoleApplication1/: ConsoleApplication1.sln
Lesson 1/Task 1/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
Lesson 10/Task 1/: CMakeLists.txt  Source.cpp
Lesson 10/Task 2/: CMakeLists.txt
Lesson 10/Task 2/Figures/: quadrangle.cpp  rectangularTriangle.cpp  square.cpp
Lesson 11/Task 1/Greeter/: Greeter.sln
Lesson 11/Task 1/Greeter/GreeterApp/: GreeterApp.cpp  GreeterApp.vcxproj  (+1 more)
Lesson 11/Task 2/Leaver/: Leaver.sln
Lesson 11/Task 3/: CMakeLists.txt  Leaver.cpp
Lesson 11/Task 4/Figures/: Figures.sln
Lesson 11/Task 5/: CMakeLists.txt  main.cpp
Lesson 11/Task 5/Figures/: figure.h  isoscelesTriangle.h  quadrangle.h  square.h  triangle.cpp  triangle.h
Lesson 2/Task 1/ConsoleApplication1/: ConsoleApplication1.sln
Lesson 2/Task 2/ConsoleApplication1/: ConsoleApplication1.sln
Lesson 2/Task 3/ConsoleApplication1/: ConsoleApplication1.sln
Lesson 3/Task 1/Project1/: Project1.sln
Lesson 4/Task 1/Project1/: Project1.sln
Lesson 4/Task 2/Project1/: Project1.sln
Lesson 5/Task 01/Project1/: Project1.sln
Lesson 5/Task 03/Project1/: Project1.sln
Lesson 6/Task 1/Project1/: Project1.sln
Lesson 6/Task 2/Project1/: Project1.sln
Lesson 7/Task 1/Project1/: Project1.sln
Lesson 7/Task 2/Project1/: Project1.sln
Lesson 8/Task 1/Project1/: Project1.sln
Lesson 8/Task 2/Project1/: Project1.sln
Lesson 9/Task 1/Project1/: Project1.sln
Lesson 9/Task 2/Project1/: Project1.sln
(+141 files in other folders)
