cmake_minimum_required(VERSION 3.22.0)
project(figures)
add_executable(figures main.cpp Figures/equilateralTriangle.cpp Figures/figure.cpp Figures/isoscelesTriangle.cpp Figures/parallelogram.cpp 
Figures/quadrangle.cpp Figures/rectangle.cpp Figures/rectangularTriangle.cpp Figures/rhomb.cpp Figures/square.cpp Figures/triangle.cpp)